SOLR-16607: org.apache.solr.security.hadoop.LocaleTest.testWithKdc needs to handle locales raj, bho, bgc added in JDK 20 (#1269)